<resources>
    <string name="versao">Versão 0.2.2</string>
    <string name="app_name">Lista Acessível</string>
    <string name="login">Tela de Login, informe seu e-mail e senha abaixo, para entrar na aplicação</string>
    <string name="tela_usuario">Tela Área do Usuário, escolha uma das opções abaixo</string>
    <string name="inicio">Início</string>
    <string name="criar_lista">Criar Lista</string>
    <string name="visualizar_listas">Visualizar Listas</string>
    <string name="direitos">\@TechBin. Todos os direitos reservados</string>
    <string name="area_usuario">Área do Usuário</string>
    <string name="categoria">Selecione entre as categorias de Estabelecimentos abaixo</string>
    <string name="selecione_estabelecimento">Selecione um dos Estabelecimentos abaixo</string>
    <string name="selecione_produto">Selecione os Produtos abaixo</string>
    <string name="cadastro">Cadastro</string>
    <string name="perfil">Tela com o Perfil do Usuário, abaixo você encontrará todas as informações do seu perfil</string>
    <string name="bt_voltar">Voltar</string>
    <string name="title_activity_tela_sobre">Tela Sobre o aplicativo, abaixo você saberá a versão do lista acessível que você está utilizando</string>
    <string name="title_activity_tela_criar_lista_passo1">Tela Criar Lista Passo 1, nesta tela você terá que escolher a categoria do estabelecimento que desejar, para a criação de sua lista</string>
    <string name="title_activity_tela_formulario_cadastro_usuario">Tela Cadastro do Usuário, informe seus dados abaixo para fazer seu cadastro</string>
    <string name="title_activity_tela_perfil_usuario">Tela Perfil do Usuário, abaixo você encontrará todas as informações do seu perfil</string>
    <string name="title_activity_tela_detalhes_lista">Tela com os Detalhes da Lista, abaixo você terá as principais informações da sua lista de produtos</string>
    <string name="title_activity_tela_minhas_listas">Tela Minhas Listas, aqui você poderá escolher uma das listas que você já criou</string>
    <string name="title_activity_tela_criar_lista_passo2">Tela Criar Lista Passo 2, escolha na lista abaixo um estabelecimento para criar sua lista, se achar melhor use o botão com filtro de localização para encontrar mais facilmente</string>
    <string name="title_activity_tela_criar_lista_passo3">Tela Criar Lista Passo 3, aqui você selecionará os produtos que deseja, no início da tela terá o campo de busca para pesquisar por um produto mais rapidamente, clicando duas vezes no produto você terá mais detalhes</string>
    <string name="title_activity_tela_editar_perfil">Tela Editar Perfil, sigua os campos abaixo para modificar alguma informação que desejar</string>
    <string name="title_activity_tela_edicao_senha">Tela para recuperação de senha, sigua os passos abaixo para recuperar sua senha</string>
    <string name="title_activity_tela_editar_lista_passo1">Tela Editar Lista Passo 1, aqui você poderá modificar a quantidade de um produto, ou remover ele da sua lista, caso queira adicionar mais produtos terá o botão para adicionar no final da tela</string>
    <string name="title_activity_tela_editar_lista_passo2">Tela Editar Lista Passo 2, aqui você encontrará os produtos que não estão em sua lista, escolha os produtos que desejar e adicione em sua lista</string>
    <string name="action_settings">Propriedades</string>
    <string name="action_sobre">Sobre</string>
    <string name="action_logout">Sair</string>
    <string name="sobre">Sobre a aplicação</string>
    <string name="hello_world">Hello world!</string>
    <string name="bt_criar_lista">Criar Lista</string>
    <string name="bt_visualizar_perfil">Visualizar Perfil</string>
    <string name="bt_visualizar_listas">Visualizar Listas</string>
    <string name="bt_mercado">Supermercado</string>
    <string name="bt_padaria">Padaria</string>
    <string name="bt_farmacia">Farmácia</string>
    <string name="bt_livraria">Livraria</string>
    <string name="title_activity_formulario_cadastro_usuario">Formulário cadastro Usuário</string>
    <string name="bt_salvar_senha">Salvar Senha</string>
    <string name="bt_salvar_senha_nova">Salvar Nova Senha</string>
    <string name="bt_editar">Editar</string>
    <string name="bt_excluir">Excluir</string>
    <string name="bt_detalhes">Detalhes</string>
    <string name="bt_detalhes_lista">Visualizar Detalhes da Lista</string>
    <string name="bt_editar_senha">Editar Senha</string>
    <string name="bt_editar_perfil">Editar Perfil</string>
    <string name="bt_excluir_perfil">Excluir Perfil</string>
    <string name="bt_filtro_bairro">Filtrar por Bairro</string>
    <string name="bt_entrar">Entrar</string>
    <string name="bt_cadastrar">Cadastrar</string>
    <string name="bt_imprimir">Imprimir</string>
    <string name="bt_confirmar_solicitar_entrega">Confirmar Solicitação</string>
    <string name="bt_solicitar_entrega">Solicitar</string>
    <string name="bt_remover_lista">Remover</string>
    <string name="bt_solicitar_entrega_completo">Solicitar Entrega ao estabelecimento</string>
    <string name="bt_confirmar_cadastro">Confirmar Cadastro</string>
    <string name="bt_limpar">Limpar</string>
    <string name="bt_finalizar_lista">Finalizar Lista</string>
    <string name="bt_concluir_lista">Concluir Lista</string>
    <string name="bt_adicionar_novos_produtos">Adicionar Produtos</string>
    <string name="bt_adicionar_produto">Adicionar Produto a Lista</string>
    <string name="bt_finalizar_edicao">Finalizar Edição</string>
    <string name="bt_login">Entrar</string>
    <string name="selecionar_produto">Marque aqui para selecionar o produto</string>
    <string name="digite_descricao_lista">Digite uma descrição para a lista</string>
    <string name="pesquisar_produto_nome">Digite um nome para pesquisar por um produto</string>
    <string name="pesquisar_produto">Campo para Pesquisar Produtos</string>
    <string name="quantidade_produto">Digite aqui a quantidade que desejar do produto selecionado</string>
    <string name="quantidade_produto_detalhes">Quantidade selecionada do produto</string>
    <string name="bt_salvar_perfil">Salvar</string>
    <string name="bt_recuperar_senha">Recuperar senha</string>
    <string name="valor_0">"0"</string>
    <string name="bt_proximo">Próximo</string>
    <string name="bt_proxima_pagina">Próxima Página</string>
    <string name="bt_pagina_anterior">Página Anterior</string>
    <string name="bt_anterior">Anterior</string>
    <string name="bt_pesquisar">Pesquisar Produto</string>
    <string name="bt_editar_produto">Editar Produto</string>
    <string name="bt_confirmar_produto">Confirmar Produto</string>
    <string name="bt_remover_produto">Remover Produto</string>
    <string name="bt_alterar_produto">Alterar Produto</string>
    <string name="bt_maisDetalhes">Mais Detalhes</string>
    <string name="dados_login">Dados de Login</string>
    <string name="dados_pessoais">Dados Pessoais</string>
    <string name="dados_localizacao">Dados de Localização</string>
    <string name="nome_completo">Nome Completo:</string>
    <string name="nome">Nome:</string>
    <string name="email">E-mail:</string>
    <string name="informe_email">Informe aqui o seu E-mail:</string>
    <string name="ano_nascimento">Ano de Nascimento:</string>
    <string name="cpf">CPF:</string>
    <string name="telefones">Telefones para contato:</string>
    <string name="telefone1">Telefone 1:</string>
    <string name="telefone2">Telefone 2:</string>
    <string name="estado">Estado:</string>
    <string name="cep">CEP:</string>
    <string name="cidade">Cidade:</string>
    <string name="rua">Rua:</string>
    <string name="bairro">Bairro:</string>
    <string name="numero">Número:</string>
    <string name="complemento">Complemento:</string>
    <string name="referencia">Referência:</string>
    <string name="senha">Senha:</string>
    <string name="senha_atual">Senha Atual:</string>
    <string name="senha_nova">Nova Senha:</string>
    <string name="senha_confirmar">Confirmar Senha:</string>
    <string name="title_activity_tela_about">TelaAbout</string>
    <string name="carregando">Carregando...</string>
    <string name="carregando_acessivel">Carregando o aplicativo lista acessível</string>
    <string name="senha_esquecida">Esqueci minha senha</string>
    <string name="senha_esquecida_descricao">Esqueci minha senha, clique aqui caso tenha esquecido sua senha</string>
    <string name="informacoes_lista">Informações da Lista</string>
    <string name="informacoes_produto">Informações do Produto</string>
    <string name="produtos_lista">Produtos da Lista</string>
    <string name="email_recuperacao_senha">Envie seu e-mail que em breve entraremos em contato para a modificação de sua senha</string>
    <string name="nome_produto">Nome do produto: </string>
    <string name="marca_produto">Marca do produto: </string>
    <string name="valor_produto">Valor do produto: </string>
    <string name="validade_produto">Validade do produto:</string>
    <string name="campo_email">digite seu e-mail</string>
    <string name="campo_senha">digite sua senha</string>
    <string name="campo_ano_nascimento">digite seu ano de nascimento</string>
    <string name="campo_cpf">digite seu cpf</string>
    <string name="campo_nome_completo">digite seu nome completo</string>
    <string name="campo_telefone1">digite seu primeiro telefone</string>
    <string name="campo_telefone2">digite seu segundo telefone</string>
    <string name="campo_cep">digite o cep de sua região</string>
    <string name="campo_cidade">digite sua cidade</string>
    <string name="campo_estado">digite seu estado</string>
    <string name="campo_bairro">digite seu bairro</string>
    <string name="campo_rua">digite sua rua</string>
    <string name="campo_numero">digite o número de sua residência</string>
    <string name="campo_complemento">digite um complemento</string>
    <string name="campo_referencia">digite uma referência</string>
    <string name="campo_quantidade_produto">Informe aqui a quantidade do produto: </string>
    <string name="title_activity_visualizar_perfil">Visualizar Perfil</string>
    <string name="digite_email">Digite seu e-mail</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="descricao_lista">Descreva aqui um Título para sua Lista:</string>
    <string name="situacao_lista">Situação da Lista:</string>
    <string name="data_criacao_lista">Data de criação:</string>
    <string name="bairro_estabelecimento">Bairro do Estabelecimento:</string>
    <string name="rua_estabelecimento">Rua do Estabelecimento:</string>
    <string name="estabelecimento">Estabelecimento:</string>
    <string name="quantidade_total_produtos">Quantidade total de produtos: </string>
    <string name="valor_total_lista">Valor total da lista: </string>
    <string name="ic_carinho">Ícone de um carrinho de supermercado</string>
    <string name="ic_estabelecimento">Ícone de um estabelecimento</string>
    <string name="ic_lista_acessivel">Ícone do programa Lista acessível</string>
    <string name="ic_produto">Ícone de um produto</string>
    <string name="title_activity_tela_login">TelaLogin</string>
    <string name="title_activity_item_produto_unico_passo3">ItemProdutoUnicoPasso3</string>
    <string name="title_activity_tela_splash">TelaSplash</string>
    <string name="title_activity_detalhes_do_produto">Tela Detalhes do Produto, aqui você terá informações sobre o produto e o campo de quantidade</string>
    <string name="title_activity_tela_detalhes_do_produto_editar">Tela Detalhes do Produto, aqui você terá informações sobre o produto e o campo de quantidade</string>
    <string name="title_activity_tela_detalhes_do_produto_editar2">Tela Detalhes do Produto, aqui você terá informações sobre o produto e o campo de quantidade</string>
</resources>