<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="listaacessivel.fafica.mobille.TelaLogin"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_weight="1"
        >
        <!--Nome da aplicação-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="40dp"
            android:textStyle="bold"

            />
        <!--Ícone da logo lista acessível-->
        <ImageView
            android:layout_width="128dp"
            android:layout_height="130dp"
            android:src="@drawable/ic_logo_128"
            android:layout_gravity="center"
            android:contentDescription="@string/ic_lista_acessivel"/>

        <!--Texto Nome-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/email"
            />

        <!--Entrada do email-->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/campoEmail"
            android:inputType="textEmailAddress"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:contentDescription="@string/digite_email"/>

        <!--Texto senha-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senha"/>

        <!--Entrada do senha-->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/campoSenha"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:contentDescription="@string/digite_senha"/>

        <!--Botões da tela-->
        <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_login"
                android:onClick="fazerLogin"
                android:text="@string/bt_login"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_cadastro"
                android:onClick="fazerCadastro"
                android:text="@string/bt_cadastrar"/>

        </LinearLayout>


    </LinearLayout>
    <!--Link para troca de senha-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha_esquecida"
        android:layout_gravity="center"
        android:onClick="esqueciMinhaSenha"
        android:id="@+id/textSenhaEsquecida"
        android:contentDescription="@string/senha_esquecida"
        android:linksClickable="true"
        android:clickable="true"
        android:layout_weight="1"/>

    <!--Direitos-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direitos"
        android:textColor="#221818"
        android:textSize="15dp"
        android:layout_gravity="bottom|center"
        android:layout_weight="0"
        />

</LinearLayout>


