<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mobile.listaacessivel.fafica.listaacessvel.TelaDetalhesLista">

    <TextView
        android:id="@+id/txtInformacoesLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/informacoes_lista"
        android:textSize="20dp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao_lista" />

    <TextView
        android:id="@+id/txtDescricaoLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/situacao_lista" />

    <TextView
        android:id="@+id/txtSituacaoLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_criacao_lista" />

    <TextView
        android:id="@+id/txtDataCriacaoLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estabelecimento" />

    <TextView
        android:id="@+id/txtNomeEstabelecimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bairro_estabelecimento" />

    <TextView
        android:id="@+id/txtBairroEstabelecimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rua_estabelecimento" />

    <TextView
        android:id="@+id/txtRuaEstabelecimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone1" />

    <TextView
        android:id="@+id/txtTelefone1Estabelecimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone2" />

    <TextView
        android:id="@+id/txtTelefone2Estabelecimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <!--<TextView-->
    <!--android:id="@+id/txtProdutosLista"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/produtos_lista"-->
    <!--android:textStyle="bold"-->
    <!--android:layout_gravity="center"-->
    <!--android:textSize="20dp"-->
    <!--/>-->

    <!--<ListView-->
    <!--android:id="@+id/listProdutosListaDetalhes"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="30"/>-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantidade_total_produtos" />

        <TextView
            android:id="@+id/txtQuantidadeTotalProdutos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_total_lista" />

        <TextView
            android:id="@+id/txtValorTotalLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="R$ 50.00" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btImprimirLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="imprimirLista"
            android:text="@string/bt_imprimir" />

        <Button
            android:id="@+id/btEditarLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="editarLista"
            android:text="@string/bt_editar" />

        <Button
            android:id="@+id/btSolicitarEntrega"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="solicitarEntrega"
            android:text="@string/bt_solicitar_entrega" />

    </LinearLayout>

</LinearLayout>
