<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="listaacessivel.fafica.mobille.TelaAbout"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_weight="1"
        >
        <!--Nome da aplicação-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="40dp"
            android:textStyle="bold"

            />
        <!--Ícone da logo lista acessível-->
        <ImageView
            android:layout_width="128dp"
            android:layout_height="130dp"
            android:src="@drawable/ic_logo_128"
            android:layout_gravity="center"
            android:contentDescription="@string/ic_lista_acessivel"/>

        <!--Versão do sistema-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versao"
            android:layout_gravity="center"/>

    </LinearLayout>

    <!--Direitos-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direitos"
        android:textColor="#221818"
        android:textSize="15dp"
        android:layout_gravity="bottom|center"
        android:layout_weight="0"
        />

</LinearLayout>


