<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mobile.listaacessivel.fafica.listaacessvel.TelaFinalizarLista">

    <!--Texto Descrição da lista-->
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/descricao_lista"
    android:layout_weight="0"
    android:layout_gravity="center"/>

    <!--Campo de descrição da lista-->
    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/campoDescricaoLista"
    android:contentDescription="@string/digite_descricao_lista"
    android:layout_weight="0"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="finalizarLista"
        android:focusable="true"
        android:text="@string/bt_finalizar_lista"/>

</LinearLayout>
